--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
 	},
 	"require-dev": {
 		"kdyby/doctrine": "~2.1.0@dev",
+		"symfony/property-access": "~2.5.0@dev",
 		"nette/nette": "~2.2.0@dev",
 		"nette/tester": "~1.2.0"
 	},
