--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
 	"require": {
 		"php": ">=5.4.0",
 		"nette/reflection": "~2.2.0@dev",
-		"nette/utils": "~2.2.0@dev"
+		"nette/utils": "~2.2.0@dev",
+		"phing/phing": "~2.8.0",
+		"squizlabs/php_codesniffer": "~1.5.0"
 	},
 	"require-dev": {
 		"kdyby/doctrine": "~2.1.0@dev",
