--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,13 @@
 	"extra": {
 		"branch-alias": {
 			"dev-master": "1.0-dev"
+		},
+		"venne": {
+			"configuration": {
+				"extensions": {
+					"dataTransfer": "Venne\\DataTransfer\\DI\\DataTransferExtension"
+				}
+			}
 		}
 	}
 }
